--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+
+<div class='px-5 md:px-10 lg:px-20 2xl:px-40'>
+<router-outlet></router-outlet>
+</div>
