--- a/src/app/components/edit-post/edit-post.component.html
+++ b/src/app/components/edit-post/edit-post.component.html
@@ -1,1 +1,25 @@
-<p>edit-post works!</p>
+<div class="container mx-auto">
+    <h2 class="text-2xl font-bold my-4">Edit Post</h2>
+  
+    <form [formGroup]="postForm" (ngSubmit)="onSubmit()" class="flex flex-col">
+      <input
+        formControlName="title"
+        class="mb-4 p-2 border rounded"
+        placeholder="Title"
+        required
+      />
+      <textarea
+        formControlName="body"
+        class="mb-4 p-2 border rounded"
+        placeholder="Body"
+        required
+      ></textarea>
+      <button
+        type="submit"
+        class="bg-blue-500 text-white py-2 px-4 rounded"
+      >
+        Update Post
+      </button>
+    </form>
+  </div>
+  
