--- a/src/app/components/post-detail/post-detail.component.html
+++ b/src/app/components/post-detail/post-detail.component.html
@@ -1,1 +1,34 @@
-<p>post-detail works!</p>
+
+  <div class="container mx-auto p-6">
+    <h2 class="text-3xl font-bold text-green-900 mb-6 border-b-2 border-gray-200 pb-3">
+      {{ post.title }}
+    </h2>
+  
+    <p class="text-lg text-gray-700 leading-relaxed mb-8">
+      {{ post.body }}
+    </p>
+  
+    <div>
+      <h3 class="text-2xl font-semibold text-gray-800 mb-4">Comments:</h3>
+  
+      <ul class="list-none space-y-6">
+        <li *ngFor="let comment of comments">
+
+          <div class="p-4 bg-gray-100 rounded-lg">
+            <span class="text-green-700 font-semibold text-lg block ">
+              {{ comment.name}}
+            </span>
+            <p class="text-gray-600 text-sm leading-relaxed mt-2">
+                {{ comment.email }}
+              </p>
+            <p class="text-gray-600 text-sm leading-relaxed mt-2">
+              {{ comment.body }}
+            </p>
+          </div>
+
+        </li>
+      </ul>
+    </div>
+
+  </div>
+  
