--- a/src/app/components/add-post/add-post.component.html
+++ b/src/app/components/add-post/add-post.component.html
@@ -1,26 +1,28 @@
 <div class="container mx-auto">
-    <h2 class="text-2xl font-bold my-4 text-green-900">Create New Post</h2>
+    <h2 class="text-lg md:text-xl font-bold my-4 text-green-900">Create New Post</h2>
   
     <form [formGroup]="postForm" (ngSubmit)="onSubmit()" class="flex flex-col">
       <input
         formControlName="title"
-        class="mb-4 p-2 border rounded"
+        class="mb-4 p-2 border rounded text-sm md:text-md"
         placeholder="Title"
         required
       />
       <textarea
         formControlName="body"
-        class="mb-4 p-2 border rounded"
+        class="mb-4 p-2 border rounded h-48 text-sm md:text-md"
         placeholder="Body"
         required
       ></textarea>
-      <button
-        type="submit"
-        class="bg-green-800 hover:bg-green-900 text-white py-2 px-4 rounded-full cursor-pointer"
-        [disabled]="postForm.invalid"
-      >
-        Create Post
-      </button>
+
+      <div class="flex justify-end">
+        <button
+          type="submit"
+          [disabled]="postForm.invalid"
+          class="bg-green-800 cursor-pointer text-white py-2 px-8 rounded-full hover:bg-green-900 focus:outline-none focus:ring-2 focus:ring-green-800 flex items-center space-x-2 text-sm md:text-md">
+          Create Post
+        </button>
+      </div>
     </form>
   </div>
   
