--- a/src/app/components/edit-post/edit-post.component.html
+++ b/src/app/components/edit-post/edit-post.component.html
@@ -1,25 +1,48 @@
-<div class="container mx-auto">
-    <h2 class="text-2xl font-bold my-4">Edit Post</h2>
-  
-    <form [formGroup]="postForm" (ngSubmit)="onSubmit()" class="flex flex-col">
+<div class="container mx-auto px-4 py-6">
+<div class='flex gap-20 mb-6'>
+    <button 
+      class="text-green-800"
+      (click)="goBack()">
+      <i class="fas fa-arrow-left text-lg"></i>
+    </button>
+
+  <div>
+    <h2 class="text-lg md:text-xl font-semibold text-green-900">Edit Post</h2>
+  </div>
+</div>
+
+  <form [formGroup]="postForm" (ngSubmit)="onSubmit()" class="space-y-4">
+    
+    <div>
+      <label for="title" class="block text-sm font-medium text-gray-700">Title</label>
       <input
         formControlName="title"
-        class="mb-4 p-2 border rounded"
-        placeholder="Title"
+        id="title"
+        type="text"
+        class="w-full text-sm md:text-md mt-1 p-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-1 focus:ring-green-800"
+        placeholder="Enter the post title"
         required
       />
+    </div>
+
+    <div>
+      <label for="body" class="block text-sm font-medium text-gray-700">Body</label>
       <textarea
         formControlName="body"
-        class="mb-4 p-2 border rounded"
-        placeholder="Body"
+        id="body"
+        class="w-full text-sm md:text-md mt-1 p-3 border border-gray-300 rounded-lg shadow-sm h-48 resize-none focus:outline-none focus:ring-1 focus:ring-green-800"
+        placeholder="Write the content of the post"
         required
       ></textarea>
+    </div>
+
+
+    <div class="flex justify-end">
       <button
         type="submit"
-        class="bg-blue-500 text-white py-2 px-4 rounded"
-      >
+        class="bg-green-800 cursor-pointer text-white py-2 px-8 rounded-full hover:bg-green-900 focus:outline-none focus:ring-2 focus:ring-green-800 flex items-center space-x-2 text-sm md:text-md">
         Update Post
       </button>
-    </form>
-  </div>
-  
+    </div>
+  </form>
+</div>
