--- a/src/app/components/post-detail/post-detail.component.html
+++ b/src/app/components/post-detail/post-detail.component.html
@@ -1,34 +1,44 @@
-
-  <div class="container mx-auto p-6">
-    <h2 class="text-3xl font-bold text-green-900 mb-6 border-b-2 border-gray-200 pb-3">
-      {{ post.title }}
-    </h2>
-  
-    <p class="text-lg text-gray-700 leading-relaxed mb-8">
-      {{ post.body }}
-    </p>
-  
-    <div>
-      <h3 class="text-2xl font-semibold text-gray-800 mb-4">Comments:</h3>
-  
-      <ul class="list-none space-y-6">
-        <li *ngFor="let comment of comments">
-
-          <div class="p-4 bg-gray-100 rounded-lg">
-            <span class="text-green-700 font-semibold text-lg block ">
-              {{ comment.name}}
-            </span>
-            <p class="text-gray-600 text-sm leading-relaxed mt-2">
-                {{ comment.email }}
-              </p>
-            <p class="text-gray-600 text-sm leading-relaxed mt-2">
-              {{ comment.body }}
-            </p>
-          </div>
-
-        </li>
-      </ul>
-    </div>
-
+<div *ngIf="isLoading" class="flex items-center justify-center h-screen absolute inset-0 bg-white bg-opacity-75 z-50">
+  <div class="text-center">
+    <p class="text-lg font-medium text-green-800 slow-bounce">Loading...</p>
   </div>
-  
+</div>
+
+<div *ngIf="!isLoading" class="container mx-auto p-6">
+
+  <button 
+      class="text-green-800 mb-6"
+      (click)="goBack()">
+      <i class="fas fa-arrow-left text-lg"></i>
+    </button>
+
+  <h2 class="text-lg md:text-xl font-bold text-green-900 mb-6 border-b-2 border-gray-200 pb-3">
+    {{ post.title }}
+  </h2>
+
+  <p class="text-sm md:text-md text-gray-700 leading-relaxed mb-8">
+    {{ post.body }}
+  </p>
+
+  <div>
+    <h3 class="text-lg md:text-xl font-semibold text-green-900 mb-4">Comments:</h3>
+
+    <ul class="list-none space-y-6">
+      <li *ngFor="let comment of comments">
+
+        <div class="p-4 bg-gray-100 rounded-lg">
+          <span class="text-green-700 font-semibold text-lg block ">
+            {{ comment.name }}
+          </span>
+          <p class="text-gray-600 text-sm leading-relaxed mt-2">
+            {{ comment.email }}
+          </p>
+          <p class="text-gray-600 text-sm md:text-m leading-relaxed mt-2">
+            {{ comment.body }}
+          </p>
+        </div>
+
+      </li>
+    </ul>
+  </div>
+</div>
